# blimp_project

./: .gitignore  CEILING_DETECTION.md  COMPLETE_FEATURE_SUMMARY.md  PHYSICS_BASED_CONTROL.md  VELOCITY_PREDICTIVE_CONTROL.md  frames_2025-09-24_23.27.05.gv
src/blimp_core/: package.xml  setup.cfg  setup.py
src/blimp_core/blimp_core/: README.md  blimp_obstacle_visualizer.py  msp_diag.py  odom_to_path.py  simple_stvl_test.py
src/blimp_core/config/: blimp_stvl_costmap_params.yaml  stvl_costmap_params.yaml
src/blimp_core/config/rtabmap/: rtabmap_3d_lidar_icp.yaml  rtabmap_lidar_only_icp.yaml  rtabmap_mono_lidar.yaml  rtabmap_stereo.yaml
src/blimp_core/launch/: blimp_localization_launch.py  blimp_localization_slam_launch.py  blimp_localization_stvl_hybrid_launch.py  blimp_slam_launch.py
src/blimp_navigation/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/blimp_navigation/include/blimp_navigation/: actuator_interface.hpp  blimp_controller.hpp  blimp_dynamics.hpp  obstacle_avoidance.hpp  path_follower.hpp  path_planner.hpp  pid.hpp
src/blimp_navigation/launch/: blimp_navigation_launch.py  blimp_navigator.launch.py
src/blimp_navigation/param/: blimp_navigator.yaml
src/blimp_navigation/src/: actuator_exerciser.cpp  actuator_interface.cpp  blimp_controller.cpp  blimp_navigator_node.cpp  obstacle_avoidance.cpp  octomap_checker_node.cpp  path_follower.cpp  path_planner.cpp  pid.cpp
src/blimp_navigation/srv/: CheckCollision.srv  PlanPath.srv
src/blimp_navigation/test/: test_actuator_sequence.cpp  test_motor_mapping.cpp  test_path_follower.cpp
src/blimp_navigation_py/: package.xml  setup.cfg  setup.py
src/blimp_navigation_py/blimp_navigation_py/: blimp_controller.py  blimp_navigator.py  pid.py
src/blimp_navigation_py/launch/: blimp_navigation_py_launch.py
src/blimp_navigation_py/resource/: blimp_navigation_py
src/blimp_navigation_py/scripts/: blimp_navigator_wrapper.sh
src/blimp_ompl_planner/: CMakeLists.txt  FOXGLOVE_USAGE.md  INTEGRATION_TEST.md  MOTOR_FIXES.md  NAVIGATION_FIXES.md  package.xml  test_planner.py
src/blimp_ompl_planner/config/: blimp_planning_bounds.yaml  ompl_planner_config.yaml
src/blimp_ompl_planner/include/blimp_ompl_planner/: octomap_manager.hpp  octomap_validity_checker.hpp  ompl_planner_node.hpp  path_planner.hpp  planner_types.hpp
src/blimp_ompl_planner/launch/: blimp_3d_navigation_launch.py  ompl_planner_launch.py
src/blimp_ompl_planner/rviz/: blimp_3d_navigation.rviz
src/blimp_ompl_planner/scripts/: README.md  bounds_analyzer.py  check_current_pose.py  interactive_3d_goal.py  path_visualizer.py  quick_bounds_analyzer.py  room_mapper.py  rviz_goal_handler.py  safety_checker.py  send_navigation_goal.py  set_altitude.py  simple_pose_check.py  test_collision_radius.py
src/blimp_ompl_planner/src/: octomap_manager.cpp  octomap_validity_checker.cpp  ompl_planner_node.cpp  path_planner.cpp
src/realsense-ros/realsense2_camera/launch/: rs_launch.py
src/sllidar_ros2/launch/: sllidar_c1_launch.py
