<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blimp_navigation</name>
  <version>0.0.1</version>
  <description>Blimp autonomous navigation package</description>
  <maintainer email="blimp2@todo.todo">blimp2</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tools needed to process this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!--
    THIS IS THE CRITICAL FIX.
    This tells CMake that it can find and use files from the ament_python package.
  -->
  <depend>ament_python</depend>

  <!-- Other necessary ROS 2 packages -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>yamspy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>type_description_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>